# fcc-python-for-penetration

./: README.md  banner-grabber.py  port-scanner.py  pyproject.toml  scanner.py
python-for-penetration-testing/: README.md  client.py  server.py
