[tool.poetry]
name = "fcc-python-for-penetration"
version = "0.1.0"
description = ""
authors = ["cpmachado <cpmachado@protonmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
python-nmap = "^0.7.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
